# os-scheduler-simulator

./: .gitignore  CMakeLists.txt  README.md
include/core/: Process.h  Simulator.h
include/schedulers/: FcfsScheduler.h  IScheduler.h  PriorityScheduler.h  RandomScheduler.h  RoundRobinScheduler.h  SjfScheduler.h  SrtfScheduler.h
include/ui/: MainWindow.h
src/: main.cpp
src/core/: Process.cpp  Simulator.cpp
src/schedulers/: FcfsScheduler.cpp  PriorityScheduler.cpp  RandomScheduler.cpp  RoundRobinScheduler.cpp  SjfScheduler.cpp  SrtfScheduler.cpp
src/ui/: MainWindow.cpp
